<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" tools:ignore="MissingTranslation">GB Tool</string>
    <string name="app_version" tools:ignore="MissingTranslation">V 1.0.0</string>
    <string name="saved_quick_message" tools:ignore="MissingTranslation">quickMessage</string>
    <string name="title_activity_bottom_navigation" tools:ignore="MissingTranslation">bottom_navigation</string>
    <string name="title_home" tools:ignore="MissingTranslation">Home</string>
    <string name="title_status" tools:ignore="MissingTranslation">Status</string>
    <string name="title_chat" tools:ignore="MissingTranslation">Chat</string>
    <string name="title_restore_ms" tools:ignore="MissingTranslation">Restore</string>
    <string name="title_text_fun" tools:ignore="MissingTranslation">Text Fun</string>
    <string name="notification_listener_service" tools:ignore="MissingTranslation">To recover WA deleted messages.</string>
    <string name="auto_reply_title" tools:ignore="MissingTranslation">Auto Reply</string>
    <string name="no_blue_tick_title" tools:ignore="MissingTranslation">No Blue Tick</string>
    <string name="recover_chat_title" tools:ignore="MissingTranslation">Recover Chat</string>
    <string name="status_download_title" tools:ignore="MissingTranslation">Status Download</string>
    <string name="sms_template_title" tools:ignore="MissingTranslation">SMS Template</string>
    <string name="schedule_chat_title" tools:ignore="MissingTranslation">Schedule(Beta)</string>
    <string name="status_schedule_title" tools:ignore="MissingTranslation">Status Schedule</string>
    <string name="ascii_face_title" tools:ignore="MissingTranslation">Ascii Face</string>
    <string name="design_txt_title" tools:ignore="MissingTranslation">Design Text</string>
    <string name="quick_reply_title" tools:ignore="MissingTranslation">Quick Reply</string>
    <string name="repeat_txt_title" tools:ignore="MissingTranslation">Repeat Text</string>
    <string name="direct_chat_title" tools:ignore="MissingTranslation">Direct Chat</string>
    <string name="wa_web_title" tools:ignore="MissingTranslation">Web</string>
    <string name="playstoreUrl" tools:ignore="MissingTranslation">https://play.google.com/store/apps/details?id=com.affixstudio.gbversion</string>
    <string name="url_privacy_policy" tools:ignore="MissingTranslation">https://adeekshith.github.io/watomatic/#/privacy-policy.md</string>
    <string name="adeekshith_twitter_handle" translatable="false" tools:ignore="MissingTranslation">\@adeekshith</string>
    <string name="url_adeekshith_twitter" translatable="false" tools:ignore="MissingTranslation">https://twitter.com/adeekshith</string>
    <string name="about" tools:ignore="MissingTranslation">About</string>
    <string name="settings" tools:ignore="MissingTranslation">Settings</string>
    <string name="privacy_policy_label" tools:ignore="MissingTranslation">Privacy Policy</string>
    <string name="service_name" tools:ignore="MissingTranslation">WA tool:Recover Message</string>
    <string name="mainAutoReplyTextPlaceholder" tools:ignore="MissingTranslation">(Custom Reply)</string>
    <string name="auto_reply_default_message" tools:ignore="MissingTranslation">⚠️User not available\n Auto Reply</string>
    <string name="mainAutoReplyLabel" tools:ignore="MissingTranslation">Auto Reply text</string>
    <string name="mainAutoReplySwitchOffLabel" tools:ignore="MissingTranslation">Auto Reply</string>
    <string name="mainAutoReplySwitchOnLabel" tools:ignore="MissingTranslation">Auto Reply</string>
    <string name="mainAutoReplyEditBtnTooltip" tools:ignore="MissingTranslation">Click to edit auto reply text</string>
    <string name="decline" tools:ignore="MissingTranslation">Decline</string>
    <string name="accept" tools:ignore="MissingTranslation">Accept</string>
    <string name="sure" tools:ignore="MissingTranslation">I\'m Sure</string>
    <string name="retry" tools:ignore="MissingTranslation">Retry</string>
    <string name="permission_dialog_title" tools:ignore="MissingTranslation">Permission Required</string>
    <string name="permission_dialog_msg" tools:ignore="MissingTranslation">This app requires Notification Access permissions to work.</string>
    <string name="permission_dialog_denied_title" tools:ignore="MissingTranslation">Permission Denied</string>
    <string name="permission_dialog_denied_msg" tools:ignore="MissingTranslation">Without this permission app is unable to auto-reply to the notifications. Are you sure you want to deny the permission?</string>
    <string name="auto_reply_des" tools:ignore="MissingTranslation">System sends auto replies to your friend or customer at anytime in those app. Also reply group chats and much more.</string>
    <string name="auto_reply_usage" tools:ignore="MissingTranslation">System send auto replies to your friend or customer at anytime. Also enable for group chat.</string>
    <string name="enable_for_apps" tools:ignore="MissingTranslation">Enable for apps</string>
    <string name="enable_auto_reply_switch_msg" tools:ignore="MissingTranslation">Enable Auto Reply Switch First.</string>
    <string name="error_atleast_single_app_must_be_selected" tools:ignore="MissingTranslation">Error: Select at-least a single app</string>
    <string name="groupReplySwitchLabel" tools:ignore="MissingTranslation">Auto reply for Group chats</string>
    <string name="group_reply_on_info_message" tools:ignore="MissingTranslation">Enabled auto reply for group chats</string>
    <string name="group_reply_off_info_message" tools:ignore="MissingTranslation">Disabled auto reply for group chats</string>
    <string name="time_picker_title" tools:ignore="MissingTranslation">Reply Frequency (BETA)</string>
    <string name="time_picker_sub_title_default" tools:ignore="MissingTranslation">Respond to all messages without control</string>
    <string name="time_picker_sub_title" tools:ignore="MissingTranslation">Respond only once every %1$d day(s) for each person or group</string>
    <string name="time_format_placeholder" tools:ignore="MissingTranslation">00:00</string>
    <string name="time_picker_edit_btn_tooltip" tools:ignore="MissingTranslation">Click to edit time delay between replies</string>
    <string name="save" tools:ignore="MissingTranslation">Save</string>
    <string name="tip_view_messages_from_fellow_users" tools:ignore="MissingTranslation">🦩 <u>View templates from community and share yours too ➚</u></string>
    <string name="append_watomatic_arribution_checkbox_label" tools:ignore="MissingTranslation">Append Watomatic arribution to help spread the word</string>
    <string name="sent_using_Watomatic" tools:ignore="MissingTranslation"></string>
    <string name="share_app_text" tools:ignore="MissingTranslation">I am using Watomatic to break away from WA. Try it out: watomatic.app</string>
    <string name="share" tools:ignore="MissingTranslation">Share</string>
    <string name="share_subject" tools:ignore="MissingTranslation">Watomatic: Auto Reply for WA</string>
    <string name="watomatic_community_label" tools:ignore="MissingTranslation"><u>Community</u></string>
    <string name="watomatic_subreddit_label" tools:ignore="MissingTranslation"><u>Let\'s discuss\nr/watomatic</u></string>
    <string name="watomatic_subreddit_url" translatable="false" tools:ignore="MissingTranslation">https://www.reddit.com/r/watomatic</string>
    <string name="watomatic_github_url" translatable="false" tools:ignore="MissingTranslation">https://github.com/adeekshith/watomatic</string>
    <string name="watomatic_wato_message_url" translatable="false" tools:ignore="MissingTranslation">https://www.reddit.com/r/watomatic/comments/lrkn7j/fellow_watos_share_your_creative_wato_message/</string>
    <string name="watomatic_whatsnew_label" tools:ignore="MissingTranslation">What\'s New?</string>
    <string name="watomatic_github_latest_release_url" translatable="false" tools:ignore="MissingTranslation">https://github.com/adeekshith/watomatic/releases/latest</string>
    <string name="app_logs_file_name" translatable="false" tools:ignore="MissingTranslation">WatomaticLogs.txt</string>
    <string name="share_email_body" translatable="false" tools:ignore="MissingTranslation">Hi Team Watomatic,\nPlease find the attachment of the app logs.</string>
    <string name="share_email_subject" translatable="false" tools:ignore="MissingTranslation">Watomatic AppLogs</string>
    <string name="share_email_id" translatable="false" tools:ignore="MissingTranslation">watomatic@deekshith.in</string>
    <string name="share_email_err_msg" translatable="false" tools:ignore="MissingTranslation">Couldnot find any application to process this request</string>
    <string name="key_pref_app_language" translatable="false" tools:ignore="MissingTranslation">pref_app_language</string>
    <string name="pref_show_notification_replied_msg" translatable="false" tools:ignore="MissingTranslation">pref_show_notification_replied_msg</string>
    <string name="pref_auto_start_permission" translatable="false" tools:ignore="MissingTranslation">pref_auto_start_permission</string>
    <string name="pref_is_append_watomatic_attribution" translatable="false" tools:ignore="MissingTranslation">pref_is_append_watomatic_attribution</string>
    <string name="pref_show_foreground_service_notification" translatable="false" tools:ignore="MissingTranslation">pref_show_foreground_service_notification</string>
    <string name="show_notification_label" tools:ignore="MissingTranslation">Show notification for replied messages</string>
    <string name="preference_category_general_label" tools:ignore="MissingTranslation">General settings</string>
    <string name="preference_category_notifications_label" tools:ignore="MissingTranslation">Notifications</string>
    <string name="preference_category_troubleshooting_label" tools:ignore="MissingTranslation">Troubleshooting</string>
    <string name="enable_auto_start_label" tools:ignore="MissingTranslation">Enable Auto Start</string>
    <string name="add_attribution_label" tools:ignore="MissingTranslation">Add Attribution</string>
    <string name="enabled_apps_title" tools:ignore="MissingTranslation">Enabled Apps</string>
    <string name="always_on_notification" tools:ignore="MissingTranslation">Always-On notification</string>
    <string name="display_persistent_notification_summary" tools:ignore="MissingTranslation">Display a persistent notification to ensure Watomatic is not killed by the system</string>
    <string name="enable_auto_start_summary" tools:ignore="MissingTranslation">Some devices might need you to manually enable Auto start for Watomatic from device settings</string>
    <string name="lang_en" translatable="false" tools:ignore="MissingTranslation">English (en)</string>
    <string name="lang_ar_rSA" translatable="false" tools:ignore="MissingTranslation">اَلْعَرَبِيَّةُ (ar-SA)</string>
    <string name="lang_ca_rES" translatable="false" tools:ignore="MissingTranslation">Català (ca-ES)</string>
    <string name="lang_de_rDE" translatable="false" tools:ignore="MissingTranslation">Deutsch (de-DE)</string>
    <string name="lang_es_rES" translatable="false" tools:ignore="MissingTranslation">Español (es-ES)</string>
    <string name="lang_es_rMX" translatable="false" tools:ignore="MissingTranslation">Español (México) (es-MX)</string>
    <string name="lang_eu_rES" translatable="false" tools:ignore="MissingTranslation">Euskara (eu-ES)</string>
    <string name="Private_chat_des" tools:ignore="MissingTranslation">You will able to see the message and media file without blue tick.</string>
    <string name="cancel_schedule">Cancel Schedule</string>
    <string name="please_don_t_touch_the_screen">Please Don\'t touch the screen.</string>
    <string name="starting_schedule">Starting Schedule</string>
    <string name="starting_scheduling">Starting Scheduling</string>
</resources>